z-index fix for content with floating things (eg the mini table on Arsenic)

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -30,7 +30,7 @@ header
 	left:0px;
 	width:100%;
 	/*height:100px;*/
-	z-index:1;
+	z-index:30000;
 }   
 
 #savedPages, #history, #settings, #searchresults, #langlinks
